--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -3,13 +3,26 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% if title %}
+    <title>OYESA's PORTFOLIO | {{title}}</title>
+    {% else %}
     <title>OYESA's PORTFOLIO</title>
+    {% endif %}
+
+    {% block styles %}
+    {% bootstrap_css %}
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+    {% endblock %}
   </head>
   <body>
       
